[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/settings_vr.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/default.tres" type="Theme" id=2]
[ext_resource path="res://resources/fonts/title.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/fonts/text_strong.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/fonts/text.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/fonts/text_small.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.0627451, 0.0627451, 0.0627451, 0.501961 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0627451, 0.0627451, 0.0627451, 0.627451 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 1
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Content Margin", "Corner Radius", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0.0627451, 0.0627451, 0.0627451, 0.313726 )
draw_center = true
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0627451, 0.0627451, 0.0627451, 0.54902 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 1
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Content Margin", "Expand Margin" ]

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="GDScript" id=5]

script/source = "extends Area

func global_to_viewport(p_at):
	var t = get_node(\"CollisionShape\").global_transform
	var at = t.xform_inv(p_at)
	
	at.x = ((at.x / 1.8) + 0.5) * 1280.0
	at.y = (0.5 - (at.y / 0.9)) * 720.0

	return Vector2(at.x, at.y)

var mouse_mask = 0

func _on_pointer_pressed(p_at):
	var at = global_to_viewport(p_at)
	
	# Let's mimic a mouse
	mouse_mask = 1
	var event = InputEventMouseButton.new()
	event.set_button_index(1)
	event.set_pressed(true)
	event.set_position(at)
	event.set_global_position(at)
	event.set_button_mask(mouse_mask)
	
	get_node(\"../Viewport\").input(event)

func _on_pointer_moved(p_at, p_from):
	var at = global_to_viewport(p_at)
	var from = global_to_viewport(p_from)
	
	var event = InputEventMouseMotion.new()
	event.set_position(at)
	event.set_global_position(at)
	event.set_relative(at - from) # should this be scaled/warped?
	event.set_button_mask(mouse_mask)
	
	get_node(\"../Viewport\").input(event)

func _on_pointer_release(p_at):
	var at = global_to_viewport(p_at)

	# Let's mimic a mouse
	mouse_mask = 0
	var event = InputEventMouseButton.new()
	event.set_button_index(1)
	event.set_pressed(false)
	event.set_position(at)
	event.set_global_position(at)
	event.set_button_mask(mouse_mask)
	
	get_node(\"../Viewport\").input(event)

"

[sub_resource type="PlaneMesh" id=6]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
size = Vector2( 1.6, 0.9 )
subdivide_width = 10
subdivide_depth = 10

[sub_resource type="Shader" id=7]

code = "shader_type spatial;
render_mode unshaded;

uniform sampler2D viewport_texture : hint_albedo;

void vertex() {
	VERTEX.y = 0.5 - cos(VERTEX.x) * 0.2;
}

void fragment() {
	vec4 col = texture(viewport_texture, vec2(1.0-UV.x, UV.y));
	ALBEDO = col.rgb;
	ALPHA = col.a;
}"

[sub_resource type="ShaderMaterial" id=8]

render_priority = 0
shader = SubResource( 7 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="BoxShape" id=9]

extents = Vector3( 0.8, 0.45, 0.02 )

[node name="Settings_VR" type="Spatial" index="0"]
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Viewport" type="Viewport" parent="." index="0"]
arvr = false
size = Vector2( 1280, 720 )
own_world = false
world = null
transparent_bg = true
msaa = 0
hdr = false
disable_3d = false
keep_3d_linear = false
rgba8_out = false
usage = 0
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "GUI", "Render Target", "Rendering" ]

[node name="SettingsGUI" type="Control" parent="Viewport" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Mouse", "Theme" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="Viewport/SettingsGUI" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -281.0
margin_right = 512.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_styles" ]

[node name="WelcomeTitle" type="Label" parent="Viewport/SettingsGUI/Panel" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 16.0
margin_right = 1024.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Welcome"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "custom_constants", "custom_fonts" ]

[node name="WelcomeText" type="Label" parent="Viewport/SettingsGUI/Panel" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 96.0
margin_right = 676.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "This Sponza demo showcases the capabilities of the Godot 3 renderer.
Please choose a preset suited to your hardware below:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_constants", "custom_fonts" ]

[node name="GraphicsQuality" type="HBoxContainer" parent="Viewport/SettingsGUI/Panel" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 180.0
margin_right = 419.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 24
alignment = 0
_sections_unfolded = [ "Mouse", "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Viewport/SettingsGUI/Panel/GraphicsQuality" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 6.0
margin_right = 166.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Graphics quality"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="OptionButton" type="OptionButton" parent="Viewport/SettingsGUI/Panel/GraphicsQuality" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 190.0
margin_right = 250.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Low"
flat = false
align = 0
items = [ "Low", null, false, 0, null, "Medium", null, false, 1, null, "High", null, false, 2, null, "Ultra", null, false, 3, null ]
selected = 0
_sections_unfolded = [ "Mouse" ]

[node name="GraphicsBlurb" type="RichTextLabel" parent="Viewport/SettingsGUI/Panel" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 281.0
margin_right = 480.0
margin_bottom = 393.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
custom_constants/table_hseparation = 16
custom_constants/line_separation = 2
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_fonts" ]

[node name="GraphicsInfo" type="RichTextLabel" parent="Viewport/SettingsGUI/Panel" index="4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 185.0
margin_right = 992.0
margin_bottom = 474.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
custom_constants/table_hseparation = 16
custom_constants/line_separation = 2
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="WorldScaleLabel" type="Label" parent="Viewport/SettingsGUI/Panel" index="5"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 433.0
margin_right = 168.0
margin_bottom = 471.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Worldscale"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="WorldScaleValue" type="Label" parent="Viewport/SettingsGUI/Panel" index="6"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 439.0
margin_top = 433.0
margin_right = 481.0
margin_bottom = 471.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "1.0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="WorldScaleSlider" type="HSlider" parent="Viewport/SettingsGUI/Panel" index="7"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 178.0
margin_top = 440.0
margin_right = 345.0
margin_bottom = 458.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
tick_count = 10
ticks_on_borders = true
focus_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="ConfirmButton" type="Button" parent="Viewport/SettingsGUI/Panel" index="8"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 416.0
margin_top = 499.0
margin_right = 608.0
margin_bottom = 552.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "OK"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Rect" ]

[node name="Quit" type="Button" parent="Viewport/SettingsGUI/Panel" index="9"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 859.0
margin_top = 507.0
margin_right = 990.0
margin_bottom = 546.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Rect" ]

[node name="MenuTip" type="RichTextLabel" parent="Viewport/SettingsGUI/Panel" index="10"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 506.0
margin_right = 396.0
margin_bottom = 554.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[color=#DDFFFFFF]Press [color=#DDFFFF77][B/Right-Menu][/color] to toggle this menu.[/color]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Press [B/Right-Menu] to toggle this menu."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_fonts", "custom_styles" ]

[node name="Area" type="Area" parent="." index="1"]
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = SubResource( 5 )

[node name="Projection" type="MeshInstance" parent="Area" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1.4 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 6 )
skeleton = NodePath("..")
material/0 = SubResource( 8 )
_sections_unfolded = [ "Transform", "material" ]

[node name="CollisionShape" type="CollisionShape" parent="Area" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.1 )
shape = SubResource( 9 )
disabled = false
_sections_unfolded = [ "Transform" ]

[connection signal="item_selected" from="Viewport/SettingsGUI/Panel/GraphicsQuality/OptionButton" to="." method="_on_graphics_preset_change"]
[connection signal="value_changed" from="Viewport/SettingsGUI/Panel/WorldScaleSlider" to="." method="_on_WorldScaleSlider_value_changed"]
[connection signal="pressed" from="Viewport/SettingsGUI/Panel/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="Viewport/SettingsGUI/Panel/Quit" to="." method="_on_Quit_pressed"]
